kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-home
  namespace: ingress-home
spec:
  selector:
    app: ingress-home
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
